--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,31 @@
         <module>rotate-admin-biz</module>
     </modules>
 
+    <properties>
+        <env>alpha</env>
+        <java.src.version>1.6</java.src.version>
+        <java.target.version>1.6</java.target.version>
+        <project.encoding>UTF-8</project.encoding>
+        <repo.internal.snapshots.url>http://mvn.dianpingoa.com/dianping-snapshots</repo.internal.snapshots.url>
+        <repo.internal.releases.url>http://mvn.dianpingoa.com/dianping-releases</repo.internal.releases.url>
+        <repo.external.url>http://mvn.dianpingoa.com/third-party</repo.external.url>
+        <repo.proxy.url>http://mvn.dianpingoa.com/dprepo</repo.proxy.url>
+        <servlet.version>2.5</servlet.version>
+        <ibatis.version>2.3.4.726</ibatis.version>
+        <spring.version>3.2.3.RELEASE</spring.version>
+        <pigeon.version>2.3.6</pigeon.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <rotate.version>1.0-SNAPSHOT</rotate.version>
+        <rotate.territory.api>1.5</rotate.territory.api>
+    </properties>
     <dependencyManagement>
         <dependencies>
 
+            <dependency>
+                <groupId>com.dianping</groupId>
+                <artifactId>rotate-territory-api</artifactId>
+                <version>${rotate.territory.api}</version>
+            </dependency>
 
             <!-- Logging -->
             <dependency>
@@ -48,7 +70,11 @@
                 <artifactId>commons-logging</artifactId>
                 <version>1.1.3</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.3.2</version>
+            </dependency>
 
             <!-- dp framework -->
             <dependency>
@@ -161,6 +187,16 @@
                 <groupId>com.dianping.zebra</groupId>
                 <artifactId>zebra-ds-monitor-client</artifactId>
                 <version>0.0.7</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dianping.cat</groupId>
+                <artifactId>cat-client</artifactId>
+                <version>1.1.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dianping.cat</groupId>
+                <artifactId>cat-core</artifactId>
+                <version>1.1.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
