--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -104,7 +104,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
-        <url-pattern>/shop/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
