--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -52,26 +52,26 @@
     </filter-mapping>
 
     <!-- CAS -->
-    <filter>
-        <filter-name>ssoAllInOneFilter</filter-name>
-        <filter-class>com.dianping.rotate.admin.sso.SsoAllInOneFilter</filter-class>
-        <init-param>
-            <param-name>serverNameLionKey</param-name>
-            <param-value>rotate-pc-web.serverName</param-value>
-        </init-param>
-        <init-param>
-            <param-name>excludeUrl</param-name>
-            <!-- 不走sso -->
-            <param-value>^(/diff\.jsp).*</param-value>
-        </init-param>
-    </filter>
+    <!--<filter>-->
+        <!--<filter-name>ssoAllInOneFilter</filter-name>-->
+        <!--<filter-class>com.dianping.rotate.admin.sso.SsoAllInOneFilter</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>serverNameLionKey</param-name>-->
+            <!--<param-value>rotate-pc-web.serverName</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>excludeUrl</param-name>-->
+            <!--&lt;!&ndash; 不走sso &ndash;&gt;-->
+            <!--<param-value>^(/diff\.jsp).*</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
 
-    <filter-mapping>
-        <filter-name>ssoAllInOneFilter</filter-name>
-        <url-pattern>/shop/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-    </filter-mapping>
+    <!--<filter-mapping>-->
+        <!--<filter-name>ssoAllInOneFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+        <!--<dispatcher>REQUEST</dispatcher>-->
+        <!--<dispatcher>FORWARD</dispatcher>-->
+    <!--</filter-mapping>-->
 
     <!-- Context param and listener -->
     <context-param>
@@ -106,7 +106,7 @@
         <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+    <!--<welcome-file-list>-->
+        <!--<welcome-file>index.jsp</welcome-file>-->
+    <!--</welcome-file-list>-->
 </web-app>
