--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -73,6 +73,7 @@
         <!--<dispatcher>FORWARD</dispatcher>-->
     <!--</filter-mapping>-->
 
+
     <!-- Context param and listener -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -104,7 +105,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
     <!--<welcome-file-list>-->
         <!--<welcome-file>index.jsp</welcome-file>-->
