--- a/rotate-admin-web/pom.xml
+++ b/rotate-admin-web/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>rotate-admin</artifactId>
-        <groupId>rotate-admin</groupId>
+        <groupId>com.dianping</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -30,6 +30,7 @@
         <dependency>
             <groupId>com.dianping</groupId>
             <artifactId>rotate-admin-biz</artifactId>
+            <version>${project.version.biz}</version>
         </dependency>
 
         <dependency>
