--- a/rotate-admin-biz/pom.xml
+++ b/rotate-admin-biz/pom.xml
@@ -22,7 +22,11 @@
             <groupId>com.dianping.lion</groupId>
             <artifactId>lion-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.dianping.dpsf</groupId>
+            <artifactId>dpsf-net</artifactId>
 
+        </dependency>
         <dependency>
             <groupId>com.dianping</groupId>
             <artifactId>rotate-territory-api</artifactId>
