--- a/rotate-admin-biz/pom.xml
+++ b/rotate-admin-biz/pom.xml
@@ -43,6 +43,16 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>ba-base-organizationalstructure-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>dp-common-util</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
