--- a/rotate-admin-web/pom.xml
+++ b/rotate-admin-web/pom.xml
@@ -15,6 +15,10 @@
 
     <dependencies>
         <dependency>
+        <groupId>org.jasig.cas</groupId>
+        <artifactId>cas-server-support-oauth</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
