--- a/rotate-admin-web/pom.xml
+++ b/rotate-admin-web/pom.xml
@@ -17,6 +17,14 @@
         <dependency>
         <groupId>org.jasig.cas</groupId>
         <artifactId>cas-server-support-oauth</artifactId>
+
+            <exclusions>
+
+                <exclusion>
+                    <artifactId>xmldsig</artifactId>
+                    <groupId>javax.xml</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
