--- a/rotate-admin-web/pom.xml
+++ b/rotate-admin-web/pom.xml
@@ -51,6 +51,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>dp-common-service</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
