--- a/rotate-admin-biz/pom.xml
+++ b/rotate-admin-biz/pom.xml
@@ -33,13 +33,15 @@
         <dependency>
             <groupId>com.dianping.dpsf</groupId>
             <artifactId>dpsf-net</artifactId>
-
         </dependency>
         <dependency>
             <groupId>com.dianping</groupId>
             <artifactId>rotate-territory-api</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>rotate-shop-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
@@ -60,6 +62,10 @@
         <dependency>
             <groupId>com.dianping</groupId>
             <artifactId>dp-common-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>dp-common-service</artifactId>
         </dependency>
     </dependencies>
 
