--- a/rotate-admin-biz/pom.xml
+++ b/rotate-admin-biz/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>apollobase-api</artifactId>
             <groupId>com.dianping</groupId>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
         <dependency>
             <groupId>smt-base</groupId>
             <artifactId>smt-base</artifactId>
@@ -66,6 +71,11 @@
         <dependency>
             <groupId>com.dianping</groupId>
             <artifactId>dp-common-service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
