--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
         <project.version.biz>1.0-SNAPSHOT</project.version.biz>
         <ba.base.organizationalstructure.api>0.0.17</ba.base.organizationalstructure.api>
         <smt.base.version>1.0.2-SNAPSHOT</smt.base.version>
-        <apollobase.api.version>1.2</apollobase.api.version>
+        <apollobase.api.version>1.3</apollobase.api.version>
+        <rotate.org.version>1.9-SNAPSHOT</rotate.org.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -44,6 +45,14 @@
                 <groupId>com.dianping</groupId>
                 <version>${apollobase.api.version}</version>
             </dependency>
+
+
+            <dependency>
+                <artifactId>rotate-org-api</artifactId>
+                <groupId>com.dianping</groupId>
+                <version>${rotate.org.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>smt-base</groupId>
                 <artifactId>smt-base</artifactId>
