--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -97,8 +97,7 @@
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>
-                classpath*:config/spring/common/appcontext-*.xml,
-                classpath*:config/spring/local/appcontext-*.xml
+                classpath*:config/spring/mvc/appcontext-mvc.xml
             </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
