--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,24 @@
         version="2.5">
   <display-name>Archetype Created Web Application</display-name>
 
+
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>classpath:log/log4j.xml</param-value>
+    </context-param>
+
+    <!--Spring默认刷新Log4j配置文件的间隔,单位为毫秒-->
+    <context-param>
+        <param-name>log4jRefreshInterval</param-name>
+        <param-value>60000</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>webAppRootKey</param-name>
+        <param-value>rotate-admin-web.root</param-value>
+    </context-param>
+
+
     <filter>
         <filter-name>characterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -88,6 +106,10 @@
     </listener>
     <listener>
         <listener-class>com.dianping.cat.servlet.CatListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
 
     <!-- Handles all requests into the application -->
