--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,16 @@
         <apollobase.api.version>1.3</apollobase.api.version>
         <rotate.org.version>1.10-SNAPSHOT</rotate.org.version>
         <task.center.api.version>1.0.10-SNAPSHOT</task.center.api.version>
-        <rotate.org.api.version>2.3-SNAPSHOT</rotate.org.api.version>
+        <rotate.org.api.version>2.5-SNAPSHOT</rotate.org.api.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>net.sf.dozer</groupId>
+                <artifactId>dozer</artifactId>
+                <version>5.2.1</version>
+            </dependency>
+
             <dependency>
                 <artifactId>rotate-org-api</artifactId>
                 <groupId>com.dianping</groupId>
