--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath:log/log4j.xml</param-value>
+        <param-value>classpath:log4j.xml</param-value>
     </context-param>
 
     <!--Spring默认刷新Log4j配置文件的间隔,单位为毫秒-->
@@ -70,26 +70,42 @@
     </filter-mapping>
 
     <!-- CAS -->
-    <!--<filter>-->
-        <!--<filter-name>ssoAllInOneFilter</filter-name>-->
-        <!--<filter-class>com.dianping.rotate.admin.sso.SsoAllInOneFilter</filter-class>-->
-        <!--<init-param>-->
-            <!--<param-name>serverNameLionKey</param-name>-->
-            <!--<param-value>rotate-pc-web.serverName</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>excludeUrl</param-name>-->
-            <!--&lt;!&ndash; 不走sso &ndash;&gt;-->
-            <!--<param-value>^(/diff\.jsp).*</param-value>-->
-        <!--</init-param>-->
-    <!--</filter>-->
+    <filter>
+        <filter-name>ssoAllInOneFilter</filter-name>
+        <filter-class>com.dianping.rotate.admin.sso.SsoAllInOneFilter</filter-class>
+        <init-param>
+            <param-name>serverNameLionKey</param-name>
+            <param-value>rotate-pc-web.serverName</param-value>
+        </init-param>
+        <init-param>
+            <param-name>excludeUrl</param-name>
+            <!-- 不走sso -->
+            <param-value>^(/diff\.jsp).*</param-value>
+        </init-param>
+    </filter>
 
-    <!--<filter-mapping>-->
-        <!--<filter-name>ssoAllInOneFilter</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-        <!--<dispatcher>REQUEST</dispatcher>-->
-        <!--<dispatcher>FORWARD</dispatcher>-->
-    <!--</filter-mapping>-->
+    <filter-mapping>
+        <filter-name>ssoAllInOneFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>authorizeFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>authorizeFilter</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>authorizeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
 
 
     <!-- Context param and listener -->
