--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <rotate.org.version>1.10-SNAPSHOT</rotate.org.version>
         <task.center.api.version>1.0.10-SNAPSHOT</task.center.api.version>
         <rotate.org.api.version>2.8-SNAPSHOT</rotate.org.api.version>
+        <cas.client.core.product.version>3.2.1-memcached-SNAPSHOT</cas.client.core.product.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -273,13 +274,54 @@
                 <version>1.1.3</version>
             </dependency>
             <dependency>
-                <groupId>org.jasig.cas</groupId>
-                <artifactId>cas-server-support-oauth</artifactId>
-                <version>3.5.2-STABLE.2</version>
+                <groupId>org.jasig.cas.client</groupId>
+                <artifactId>cas-client-core-product</artifactId>
+                <version>${cas.client.core.product.version}</version>
                 <exclusions>
                     <exclusion>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-adb</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-kernel</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>axis2-transport-http</groupId>
+                        <artifactId>axis2-transport-http</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>axis2-transport-local</groupId>
+                        <artifactId>axis2-transport-local</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.neethi</groupId>
+                        <artifactId>neethi</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.dianping</groupId>
+                        <artifactId>avatar-cache</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.dianping.zebra</groupId>
+                        <artifactId>zebra-ds-monitor-client</artifactId>
+                    </exclusion>
+
+                    <exclusion>
                         <groupId>com.dianping.lion</groupId>
-                        <artifactId>*</artifactId>
+                        <artifactId>lion-alpha</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.dianping.lion</groupId>
+                        <artifactId>lion-qa</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.dianping.lion</groupId>
+                        <artifactId>lion-product</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
