--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
                 <version>${apollobase.api.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>4.1.0.Final</version>
+            </dependency>
+
+
 
             <dependency>
                 <artifactId>rotate-org-api</artifactId>
