--- a/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/rotate-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -70,26 +70,123 @@
     </filter-mapping>
 
     <!-- CAS -->
+    <!--<filter>-->
+        <!--<filter-name>ssoAllInOneFilter</filter-name>-->
+        <!--<filter-class>com.dianping.rotate.admin.sso.SsoAllInOneFilter</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>serverNameLionKey</param-name>-->
+            <!--<param-value>rotate-pc-web.serverName</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>excludeUrl</param-name>-->
+            <!--&lt;!&ndash; 不走sso &ndash;&gt;-->
+            <!--<param-value>^(/diff\.jsp).*</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+
+    <!--<filter-mapping>-->
+        <!--<filter-name>ssoAllInOneFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+        <!--<dispatcher>REQUEST</dispatcher>-->
+        <!--<dispatcher>FORWARD</dispatcher>-->
+    <!--</filter-mapping>-->
+
     <filter>
-        <filter-name>ssoAllInOneFilter</filter-name>
-        <filter-class>com.dianping.rotate.admin.sso.SsoAllInOneFilter</filter-class>
+        <filter-name>CAS Single Sign Out Filter</filter-name>
+        <filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
+        <init-param>
+            <param-name>artifactParameterName</param-name>
+            <param-value>SAMLart</param-value>
+        </init-param>
+    </filter>
+
+    <filter>
+        <filter-name>CAS Authentication Filter</filter-name>
+        <filter-class>org.jasig.cas.client.authentication.Saml11AuthenticationFilter</filter-class>
+        <init-param>
+            <param-name>casServerLoginUrlLionKey</param-name>
+            <param-value>cas-server-webapp.loginUrl</param-value>
+        </init-param>
         <init-param>
             <param-name>serverNameLionKey</param-name>
             <param-value>rotate-pc-web.serverName</param-value>
         </init-param>
+
+        <!-- <init-param>
+             <param-name>casServerLoginUrl</param-name>
+             <param-value>https://sso.a.alpha.dp:8443/login</param-value>
+         </init-param>
+         <init-param>
+             <param-name>serverName</param-name>
+             <param-value>http://www.test.com:8080</param-value>
+         </init-param>-->
+    </filter>
+
+    <filter>
+        <filter-name>CAS Validation Filter</filter-name>
+        <filter-class>org.jasig.cas.client.validation.Saml11TicketValidationFilter</filter-class>
+
         <init-param>
-            <param-name>excludeUrl</param-name>
-            <!-- 不走sso -->
-            <param-value>^(/diff\.jsp).*</param-value>
+            <param-name>casServerUrlPrefixLionKey</param-name>
+            <param-value>cas-server-webapp.serverName</param-value>
+        </init-param>
+        <init-param>
+            <param-name>serverNameLionKey</param-name>
+            <param-value>rotate-pc-web.serverName</param-value>
+        </init-param>
+
+        <!--  <init-param>
+              <param-name>casServerUrlPrefix</param-name>
+              <param-value>https://sso.a.alpha.dp:8443</param-value>
+          </init-param>
+          <init-param>
+              <param-name>serverName</param-name>
+              <param-value>http://www.test.com:8080</param-value>
+          </init-param>-->
+        <init-param>
+            <param-name>redirectAfterValidation</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>tolerance</param-name>
+            <param-value>5000</param-value>
         </init-param>
     </filter>
 
+    <filter>
+        <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
+        <filter-class>org.jasig.cas.client.util.HttpServletRequestWrapperFilter</filter-class>
+    </filter>
+
     <filter-mapping>
-        <filter-name>ssoAllInOneFilter</filter-name>
+        <filter-name>CAS Single Sign Out Filter</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>CAS Authentication Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>CAS Validation Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+
+
 
     <filter>
         <filter-name>authorizeFilter</filter-name>
