--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         <slf4j.version>1.7.5</slf4j.version>
         <rotate.version>1.0-SNAPSHOT</rotate.version>
         <rotate.territory.api>2.4.3-SNAPSHOT</rotate.territory.api>
-        <rotate.shop.api>1.0.8-SNAPSHOT</rotate.shop.api>
         <project.version.biz>1.0-SNAPSHOT</project.version.biz>
+        <rotate.shop.api>1.1.1-SNAPSHOT</rotate.shop.api>
         <ba.base.organizationalstructure.api>0.0.17</ba.base.organizationalstructure.api>
         <smt.base.version>1.0.2-SNAPSHOT</smt.base.version>
         <apollobase.api.version>1.3</apollobase.api.version>
@@ -40,6 +40,7 @@
         <task.center.api.version>1.0.10-SNAPSHOT</task.center.api.version>
         <rotate.org.api.version>2.8-SNAPSHOT</rotate.org.api.version>
         <cas.client.core.product.version>3.2.1-memcached.STABLE.4</cas.client.core.product.version>
+        <rotate-core-api.version>0.0.7-SNAPSHOT</rotate-core-api.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -47,6 +48,18 @@
                 <groupId>net.sf.dozer</groupId>
                 <artifactId>dozer</artifactId>
                 <version>5.2.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.dianping</groupId>
+                <artifactId>shop-api</artifactId>
+                <version>0.3.30.73</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.dianping</groupId>
+                <artifactId>rotate-core-api</artifactId>
+                <version>${rotate-core-api.version}</version>
             </dependency>
 
             <dependency>
