--- a/rotate-admin-biz/pom.xml
+++ b/rotate-admin-biz/pom.xml
@@ -18,6 +18,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.dianping</groupId>
+            <artifactId>customer-data-api</artifactId>
+        </dependency>
         <!-- swallow -->
         <dependency>
             <groupId>com.dianping.swallow</groupId>
